src/App.css
html,
body {
  height: 100%;
  margin: 0;
  color: lightgray;
}

.bg {
  bottom: 0;
  left: -50%;
  position: fixed;
  right: -50%;
  top: 0;
  z-index: -1;
  animation: slide 3s ease-in-out infinite alternate;
  opacity: .5;
}

.bg-2 {
  animation-direction: alternate-reverse;
  animation-duration: 4s;
}

.bg-3 {
  animation-duration: 5s;
}

.bg-home {
  background-image: linear-gradient(-60deg, #150005 50%, #000010 50%);
}
.bg-about {
  background-image: linear-gradient(-60deg, #001018 50%, #000010 50%);
}
.bg-timeline {
  background-image: linear-gradient(-60deg, #001510 50%, #000010 50%);
}
.bg-skills {
  background-image: linear-gradient(-60deg, #150510 50%, #000010 50%);
}
.bg-projects {
  background-image: linear-gradient(-60deg, #080814 50%, #000010 50%);
}
.bg-contact {
  background-image: linear-gradient(-60deg, #001005 50%, #000010 50%);
}
.bg-notfound {
  background-image: linear-gradient(-60deg, #000000 50%, #000010 50%);
}


@keyframes slide {
  0% {
    transform: translateX(-25%);
  }

  100% {
    transform: translateX(25%);
  }
}

.welcome {
  /* background-image: url("./img/bg.jpg"); */

  text-align: center;
  justify-content: center;
  
  height: 100vh;


}

.frame {
  height: 90vh;

  position: static;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;

  text-align: center;
  justify-content: center;

  color: white;

}

/* Opacity #1 */
img {
  -webkit-filter: grayscale(80%);
  filter: grayscale(80%);
  -webkit-transition: .3s ease-in-out;
  transition: .3s ease-in-out;
}

img:hover {
  -webkit-filter: grayscale(0);
  filter: grayscale(0);
}

.my-pic {
  max-width: 50%;
  border-radius: 25px;
  -webkit-filter: grayscale(0%);
  filter: grayscale(0%);
}

